[package]
name = "wstd-tungstenite"
description = "WebSocket support for wstd, powered by tungstenite"
categories = ["web-programming::websocket", "network-programming", "wasm"]
keywords = ["websocket", "webassembly"]
authors = ["Takumi Fujiwara <jiftech.stlfy@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jiftechnify/wstd-tungstenite"
repository = "https://github.com/jiftechnify/wstd-tungstenite"
version = "0.2.0"
edition = "2024"

[features]
default = ["handshake", "connect"]
connect = ["handshake"]
handshake = ["tungstenite/handshake"]

[dependencies]
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
tungstenite = { version = "0.28.0", default-features = false }
wstd = { version = "0.6.3", default-features = false }
